# DGP

./: README.md  main.py  pyproject.toml
src/app/: __init__.py
src/app/routes/: __init__.py  __init__py  route_documents_bp.py  route_main_bp.py
src/app/static/css/: app.css
src/app/templates/: base.html  index.html
src/app/templates/documents/: new.html  preview.html
