[project]
name = "dgp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18,<2.0",
    "flask>=3.1,<4.0",
    "sqlalchemy>=2.0,<2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 101

[tool.ruff.format]
quote-style = "double"

#рекомендуется по pep8
indent-style = "space" 

docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "A", "C", "T"]

# ignore = []
